--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,4 +29,4 @@ jobs:
         run: ./gradlew build
 
       - name: Build merged JAR
-        run: ./gradleew buildMergedJar
+        run: ./gradlew buildMergedJar
