chore: add Gradle plugin publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-tapestry.version=1.0.0-beta1
+plugin.version=0.0.0
+tapestry.version=0.0.0
 
 minecraft.version=26.1-snapshot-1
 neoform.version=26.1-snapshot-1-3
