--- a/.github/workflows/publish-plugin.yml
+++ b/.github/workflows/publish-plugin.yml
@@ -38,7 +38,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add gradle.properties
-          git commit -m "chore: release ${{ github.event.inputs.version }}" || echo "no changes to commit"
+          git commit -m "chore: release plugin ${{ github.event.inputs.version }}" || echo "no changes to commit"
 
       - name: Publish
         run: ./gradlew tapestry-gradle:publish --no-daemon
