--- a/.github/workflows/publish-plugin.yml
+++ b/.github/workflows/publish-plugin.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Publish
         run: ./gradlew tapestry-gradle:publish --no-daemon
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE: 'true'
 
       - name: Push changes
