--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,5 @@ jobs:
       - name: Build Gradle plugin
         run: ./gradlew tapestry-gradle:build
 
-      - name: Build separate JARs
+      - name: Build JARs
         run: ./gradlew build
-
-      - name: Build merged JAR
-        run: ./gradlew buildMergedJar
