feat(gradle): implement mod publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,7 @@ plugin.version=0.0.0
 tapestry.version=0.0.0
 
 minecraft.version=26.1-snapshot-4
+minecraft.compatible=26.1-snapshot-4
+
 fabric.loader.version=0.18.4
 neoforge.version=26.1.0.0-alpha.8+snapshot-4
