--- a/.github/workflows/publish-mods.yml
+++ b/.github/workflows/publish-mods.yml
@@ -45,7 +45,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add gradle.properties
-          git commit -m "chore: release plugin ${{ github.event.inputs.version }}" || echo "no changes to commit"
+          git commit -m "chore: release ${{ github.event.inputs.version }}" || echo "no changes to commit"
 
       - name: Push changes
         uses: ad-m/github-push-action@v1
