--- a/.github/workflows/publish-plugin.yml
+++ b/.github/workflows/publish-plugin.yml
@@ -40,14 +40,6 @@ jobs:
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
           RELEASE: 'true'
 
-      - name: Commit version change
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add gradle.properties
-          git commit -m "chore: release plugin ${{ github.event.inputs.version }}" || echo "no changes to commit"
-
-      - name: Push changes
-        uses: ad-m/github-push-action@v1
+      - uses: stefanzweifel/git-auto-commit-action@v7
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          commit_message: 'chore: release plugin ${{ github.event.inputs.version }}'
