--- a/.github/workflows/publish-mods.yml
+++ b/.github/workflows/publish-mods.yml
@@ -1,4 +1,4 @@
-name: Publish Mods
+name: Publish mods
 
 on:
   workflow_dispatch:
@@ -40,6 +40,7 @@ jobs:
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
           RELEASE: 'true'
 
-      - uses: stefanzweifel/git-auto-commit-action@v7
+      - name: Commit and push version change
+        uses: stefanzweifel/git-auto-commit-action@v7
         with:
           commit_message: 'chore: release ${{ github.event.inputs.version }}'
