--- a/.github/workflows/publish-plugin.yml
+++ b/.github/workflows/publish-plugin.yml
@@ -40,6 +40,7 @@ jobs:
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
           RELEASE: 'true'
 
-      - uses: stefanzweifel/git-auto-commit-action@v7
+      - name: Commit and push version change
+        uses: stefanzweifel/git-auto-commit-action@v7
         with:
           commit_message: 'chore: release plugin ${{ github.event.inputs.version }}'
