--- a/.github/workflows/publish-plugin.yml
+++ b/.github/workflows/publish-plugin.yml
@@ -34,7 +34,7 @@ jobs:
           sed -i "s/^plugin\.version=.*/plugin\.version=${{ github.event.inputs.version }}/" gradle.properties
 
       - name: Publish to Maven
-        run: ./gradlew tapestry-gradle:publishPluginMavenPublicationToChrrsReleasesRepository
+        run: ./gradlew :tapestry-gradle:publishAllPublicationsToChrrsReleasesRepository
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
