--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,4 +30,11 @@ jobs:
         run: ./gradlew tapestry-gradle:build
 
       - name: Build JARs
-        run: ./gradlew build
+        run: ./gradlew build collectJars
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: mod-snapshots
+          path: build/libs/*.jar
+          retention-days: 7
